@@ -52,6 +52,8 @@ export(neighborhoodEuclidean)
 export(neighborhoodVoronoi)
 export(neighborhoodWalking)
 export(pearsonResiduals)
+export(peripheryAudit)
+export(polygonAudit)
 export(profile2D)
 export(profile3D)
 export(pumpCase)
